--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload build to GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./dist
 
