--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run build
 
       - name: Upload build to GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v2 # Mantenemos v2 por ahora
+        uses: actions/upload-pages-artifact@v3 
         with:
           path: ./dist
 
