--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -30,11 +30,10 @@ jobs:
         run: npm install
 
       - name: Build project
-        # Añade las variables de entorno aquí si son necesarias para el build
         env:
           AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
-          AIRTABLE_TABLE_ID: ${{ secrets.AIRTABLE_TABLE_ID }} # O AIRTABLE_TABLE_NAME
+          AIRTABLE_TABLE_ID: ${{ secrets.AIRTABLE_TABLE_ID }}
         run: npm run build
 
       - name: Upload build to GitHub Pages artifact
@@ -42,22 +41,12 @@ jobs:
         with:
           path: ./dist
 
-  # --- CORREGIDO: 'deploy' ---
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      # --- PASO DE DEBUG ELIMINADO (Opcional) ---
-      # - name: Debug Context
-      #   uses: actions/github-script@v7
-      #   with:
-      #     script: |
-      #       console.log(JSON.stringify(github, null, 2));
-      # --- FIN PASO DE DEBUG ---
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
