--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -50,3 +50,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        with:
+          branch: main # Replace 'gh-pages' with the branch you want to deploy t
