--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "astro-icon": "^1.1.5"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.2.3"
+    "@iconify-json/mdi": "^1.2.3",
+    "decap-cms-app": "^3.6.2",
+    "decap-server": "^3.2.0"
   }
 }
