--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -15,7 +15,7 @@ collections:
     label: "Blog Posts"
     folder: "src/content/blog"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{title | slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string", required: true }
       - { label: "Publish Date", name: "publishDate", widget: "datetime", required: true }
@@ -25,4 +25,5 @@ collections:
       - { label: "Category", name: "category", widget: "select", options: ["IA", "Negocios", "Tutoriales", "Casos de Éxito", "Opinión"], required: true }
       - { label: "Tags", name: "tags", widget: "list", allow_add: true, required: false }
       - { label: "Draft", name: "draft", widget: "boolean", default: true, required: false }
+      - { label: "Slug", name: "slug", widget: "string", required: true, hint: "URL sin espacios, tildes ni caracteres especiales (solo minúsculas, números y guiones)", pattern: ["^[a-z0-9-]+$", "Solo minúsculas, números y guiones permitidos"] }
       - { label: "Body", name: "body", widget: "markdown", required: true }
