change on blog filename

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -10,6 +10,11 @@ publish_mode: editorial_workflow
 media_folder: "public/uploads/blog"
 public_folder: "/uploads/blog"
 
+load_config_file: false
+
+scripts:
+  - /admin/custom.js
+
 collections:
   - name: "blog"
     label: "Blog Posts"
@@ -27,3 +32,7 @@ collections:
       - { label: "Draft", name: "draft", widget: "boolean", default: true, required: false }
       - { label: "Slug", name: "slug", widget: "string", required: true, hint: "URL sin espacios, tildes ni caracteres especiales (solo minúsculas, números y guiones)", pattern: ["^[a-z0-9-]+$", "Solo minúsculas, números y guiones permitidos"] }
       - { label: "Body", name: "body", widget: "markdown", required: true }
+
+      - { label: "SEO Title", name: "seoTitle", widget: "string", required: false }
+      - { label: "SEO Description", name: "seoDescription", widget: "text", required: false }
+      - { label: "SEO Keywords", name: "seoKeywords", widget: "list", allow_add: true, required: false }
