--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "cms-proxy": "netlify-cms-proxy-server"
   },
   "dependencies": {
     "astro": "^5.6.1",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@iconify-json/mdi": "^1.2.3",
     "decap-cms-app": "^3.6.2",
-    "decap-server": "^3.2.0"
+    "decap-server": "^3.2.0",
+    "netlify-cms-proxy-server": "^1.3.24"
   }
 }
