--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "airtable": "^0.12.2",
     "astro": "^5.6.1",
-    "astro-icon": "^1.1.5"
+    "astro-icon": "^1.1.5",
+    "marked": "^15.0.8"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.2.3"
+    "@iconify-json/mdi": "^1.2.3",
+    "@types/marked": "^5.0.2"
   }
 }
