--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -67,7 +67,8 @@ jobs:
         env:
           AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
-          AIRTABLE_TABLE_ID: ${{ secrets.AIRTABLE_TABLE_ID }} # Asegúrate que los nombres coincidan con tus secrets!
+          AIRTABLE_TABLE_ID: ${{ secrets.AIRTABLE_TABLE_ID }} 
+          AIRTABLE_BLOG_TABLE_ID: ${{ secrets.AIRTABLE_BLOG_TABLE_ID }}
         run: |
           ${{ steps.detect-package-manager.outputs.runner }} astro build \
             --site "${{ steps.pages.outputs.origin }}" \
