--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "airtable": "^0.12.2",
-    "astro": "^5.6.1",
+    "astro": "^5.7.5",
     "astro-icon": "^1.1.5",
     "marked": "^15.0.8"
   },
