--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.2.3",
+    "@types/dompurify": "^3.0.5",
     "@types/marked": "^5.0.2"
   }
 }
