--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "airtable": "^0.12.2",
     "astro": "^5.7.12",
     "astro-icon": "^1.1.5",
+    "dompurify": "^3.2.5",
     "marked": "^15.0.8"
   },
   "devDependencies": {
